--- a/package.json
+++ b/package.json
@@ -11,15 +11,24 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.0"
+    "next": "15.2.0",
+    "@react-pdf/renderer": "^3.3.8",
+    "pdfjs-dist": "^4.0.379",
+    "react-dropzone": "^14.2.3",
+    "framer-motion": "^11.0.5",
+    "zod": "^3.22.4",
+    "@hookform/resolvers": "^3.3.4",
+    "react-hook-form": "^7.50.1"
   },
   "devDependencies": {
     "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "@tailwindcss/forms": "^0.5.7",
+    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "@eslint/eslintrc": "^3"
